# VCBench

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: baselines.yml  docker.yml  test.yml
configs/: norman_predict.toml  pre_registration.yaml
configs/dim_a/: arc_state_norman_gears_split.toml  geneformer.yaml  scgpt.yaml  transcriptformer.yaml
configs/dim_b/: census_version.yaml  pca_knn.yaml  per_model_overrides.yaml
configs/dim_c/: beeline.yaml  pyscenic.yaml  trrust_v2.yaml
configs/dim_d/: neurips_cite_seq.yaml  ridge_decoder.yaml  sites.yaml
configs/dim_e/: dpt_params.yaml  sci_fate.yaml  weinreb.yaml
configs/environments/: vcbench-analysis.yml  vcbench-scenic.yml  vcbench-scgpt-pinned.txt
configs/model_envs/: setup_all.sh
data/static/: ensembl_symbol_map.json
docs/: LEADERBOARD.md  MANIFEST.md  README.md  contamination-schema-v1.md
results/baselines/: cell_eval_additive_scores.json  crossmodal_pca_ridge.json  crossspecies_pca_knn.json  grn_eval_trrust.json  scenic_hesc_edges.csv  temporal_pca_dpt.json
results/calibration_probe/: calibration_results.csv  calibration_results.json
results/dim_a/: geneformer_zs_vs_ft.csv  matched_subset_metrics.csv
results/dim_b/: all_crossspecies_results.json  baselines_pca_knn_common.json  common_label_macroF1.csv  common_label_set_per_tissue.json  ortholog_ablation.csv  transcriptformer_common_lung_liver.json
results/dim_c/: bootstrap_cis.csv  pairwise_delta_pvalues.csv  pyscenic_scaling.csv
results/dim_d/: all_crossmodal_results.json
results/tables/: contamination_rationale.json  ed_table1_contamination.csv  table2_regimes.csv  table2_with_baselines.csv  vc_levels.csv  vc_levels_detail.csv
src/baselines/: cross_species.py  degree_null_trrust.py  grn.py  perturbation.py
src/data/: build_ensembl_map.py  create_splits.py  (+14 more)
submissions/: TEMPLATE.md
tables/: table_s1.csv  table_s1_footnotes.txt  table_s2.csv  table_s2_footnotes.txt  table_s3.csv  table_s3_footnotes.txt  table_s3_with_ci.csv  table_s4.csv  table_s4_footnotes.txt
tests/: conftest.py  reference_values.json  test_correctness.py  test_phase_outputs.py
tools/vcbench_contamination_check/: __init__.py  check.py  pyproject.toml
tools/vcbench_contamination_check/examples/: README.md
tools/vcbench_contamination_check/tests/: test_check.py
(+136 files in other folders)
