[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcbench"
version = "1.0.0"
description = "Capability-stratified benchmark for single-cell foundation models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "VCBench contributors" }]
keywords = ["single-cell", "foundation-models", "benchmark", "perturbation", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/AppliedScientific/VCBench"
Documentation = "https://github.com/AppliedScientific/VCBench#readme"

[project.scripts]
vcbench = "vcbench.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["vcbench*"]
exclude = ["baselines*", "data*", "evaluation*", "models*", "utils*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
# importlib import mode + explicit pythonpath so vcbench resolves whether or not
# `pip install -e .` was run. Legacy src/__init__.py would otherwise shadow
# the editable-installed `vcbench` package via pytest's rootdir logic.
addopts = "-q --import-mode=importlib"
pythonpath = ["src"]
