[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
[project]
name = "vcbench-contamination-check"
version = "1.0.0"
dependencies = ["pyyaml", "pandas", "pyarrow", "anndata", "click"]
[project.scripts]
vcbench-check-contamination = "vcbench_contamination_check.check:cli"
[tool.setuptools.packages.find]
where = ["."]
include = ["vcbench_contamination_check*"]
